--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accounting Software</title>
-    <style src=".devcontainer/style.css">
+    <style src="style.css">
      
     </style>
   </head>
